--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body bgcolor="black">
     <iframe name="encabezado" height="170" width="1350" src="encabezado.html"></iframe>
-    <iframe name="menu" height="427" width="300" src="menu.html"></iframe>
-    <iframe name="contenido" height="427" width="1040" style="position: absolute; top: 186px; left: 305px;" src="contenido.html"></iframe>
+    <iframe name="menu"  width="300" src="menu.html"></iframe>
+    <iframe name="contenido"  width="1040" style="position: absolute; top: 186px; left: 305px;" src="contenido.html"></iframe>
 
 </body>
 </html>
