--- a/index.html
+++ b/index.html
@@ -7,8 +7,61 @@
 </head>
 <body bgcolor="black">
     <iframe name="encabezado" height="170" width="1350" src="encabezado.html"></iframe>
-    <iframe name="menu" height="200" width="300" src="menu.html"></iframe>
-    <iframe name="contenido" height="200" width="1040" style="position: absolute; top: 186px; left: 305px;" src="contenido.html"></iframe>
+    <iframe id="miIframe1" name="menu" height="200" width="300" src="menu.html"></iframe>
+    <iframe id="miIframe2" name="contenido" height="200" width="1040" style="position: absolute; top: 186px; left: 305px;" src="contenido.html"></iframe>
+    <script>
+        function cambiarValoresIframe() {
+            var iframe = document.getElementById('miIframe1');
 
+            // Verifica el ancho de la ventana
+            var anchoVentana = window.innerWidth ||
+                document.documentElement.clientWidth ||
+                document.body.clientWidth;
+
+            // Puedes ajustar esta condición según tus necesidades
+            if (anchoVentana < 1200) {
+                // Cambia los valores del iframe
+                iframe.width = 300;
+                iframe.height = 200;
+                iframe.src = "menu.html";
+            } else {
+                // Restaura los valores originales
+                iframe.width = 1040;
+                iframe.height = 2000;
+                iframe.src = "menu.html";
+            }
+        }
+
+        // Llama a la función cuando se carga la página y cuando cambia el tamaño de la ventana
+        window.onload = cambiarValoresIframe;
+        window.onresize = cambiarValoresIframe;
+    </script>
+    <script>
+        function cambiarValoresIframe() {
+            var iframe = document.getElementById('miIframe2');
+
+            // Verifica el ancho de la ventana
+            var anchoVentana = window.innerWidth ||
+                document.documentElement.clientWidth ||
+                document.body.clientWidth;
+
+            // Puedes ajustar esta condición según tus necesidades
+            if (anchoVentana < 1200) {
+                // Cambia los valores del iframe
+                iframe.width = 300;
+                iframe.height = 2000;
+                iframe.src = "contenido.html";
+            } else {
+                // Restaura los valores originales
+                iframe.width = 1040;
+                iframe.height = 200;
+                iframe.src = "contenido.html";
+            }
+        }
+
+        // Llama a la función cuando se carga la página y cuando cambia el tamaño de la ventana
+        window.onload = cambiarValoresIframe;
+        window.onresize = cambiarValoresIframe;
+    </script>
 </body>
 </html>
