--- a/index.html
+++ b/index.html
@@ -25,6 +25,42 @@
                 iframe1.height = 2000;
                 iframe1.src = "menu.html";
             }
+            if (largoVentana < 600) {
+                iframe1.width = 300;
+                iframe1.height = 200;
+                iframe1.src = "programacion.html";
+            } else {
+                iframe1.width = 300;
+                iframe1.height = 2000;
+                iframe1.src = "programacion.html";
+            }
+            if (largoVentana < 600) {
+                iframe1.width = 300;
+                iframe1.height = 200;
+                iframe1.src = "sistemas.html";
+            } else {
+                iframe1.width = 300;
+                iframe1.height = 2000;
+                iframe1.src = "sistemas.html";
+            }
+            if (largoVentana < 600) {
+                iframe1.width = 300;
+                iframe1.height = 200;
+                iframe1.src = "diseno.html";
+            } else {
+                iframe1.width = 300;
+                iframe1.height = 2000;
+                iframe1.src = "diseno.html";
+            }
+            if (largoVentana < 600) {
+                iframe1.width = 300;
+                iframe1.height = 200;
+                iframe1.src = "soporte.html";
+            } else {
+                iframe1.width = 300;
+                iframe1.height = 2000;
+                iframe1.src = "soporte.html";
+            }
 
             // Para miIframe2
             var iframe2 = document.getElementById('miIframe2');
