--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <iframe name="encabezado" height="170" width="1330" src="encabezado.html"></iframe>
     <iframe id="miIframe1" name="menu" height="2000" width="300" src="menu.html"></iframe>
     <iframe id="miIframe2" name="contenido" height="2000" width="1030" frameborder="0" style="position: absolute; top: 186px; left: 311px;" src="contenido.html"></iframe>
-    
+    <!-- hola-->
 </body>
 </html>
