--- a/menu.html
+++ b/menu.html
@@ -5,13 +5,11 @@
     <meta charset="utf-8" />
     <title></title>
 </head>
-<body bgcolor="black">
-    <ul>
-        <li><a href="contenido.html" target="contenido"><font color="white"><h2 style="position: absolute; top: 30px; left: 30px;">INICIO</h2></font></a></li>
-        <li><a href="programacion.html" target="contenido"><font color="white"><h2 style="position: absolute; top: 100px; left: 30px;">PROGRAMACION</h2></font></a></li>
-        <li><a href="soporte.html" target="contenido"><font color="white"><h2 style="position: absolute; top: 170px; left: 30px;">SOPORTE TECNICO</h2></font></a></li>
-        <li><a href="sistemas.html" target="contenido"><font color="white"><h2 style="position: absolute; top: 240px; left: 30px;">SISTEMAS OPERATIVOS Y REDES</h2></font></a></li>
-        <li><a href="diseno.html" target="contenido"><font color="white"><h2 style="position: absolute; top: 310px; left: 30px;">DISEÑO WEB</h2></font></a></li>
-    </ul>
+<body bgcolor="#943DEB">
+    <a href="contenido.html" target="contenido"><font color="white"><h2 style="position: absolute; top: 30px; left: 30px;">INICIO</h2></font></a>
+    <a href="programacion.html" target="contenido"><font color="white"><h2 style="position: absolute; top: 100px; left: 30px;">PROGRAMACION</h2></font></a>
+    <a href="soporte.html" target="contenido"><font color="white"><h2 style="position: absolute; top: 170px; left: 30px;">SOPORTE TECNICO</h2></font></a>
+    <a href="sistemas.html" target="contenido"><font color="white"><h2 style="position: absolute; top: 240px; left: 30px;">SISTEMAS OPERATIVOS Y REDES</h2></font></a>
+    <a href="diseno.html" target="contenido"><font color="white"><h2 style="position: absolute; top: 310px; left: 30px;">DISEÑO WEB</h2></font></a>
 </body>
 </html>
