--- a/contenido.html
+++ b/contenido.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title></title>
 </head>
-<body bgcolor="black">
+<body bgcolor="#3B84E7">
     <font color="white">
         <center>
             <h1>INICIO</h1>
