--- a/encabezado.html
+++ b/encabezado.html
@@ -17,8 +17,8 @@
                     </td>
                 </tr>
             </table>
-            <img src="imagen.jpg" alt="Imagen" style="position: absolute; top: 10px; left: 1180px;" width="125" height="125">
-            
+            <img src="colegio.png" alt="Imagen" style="position: absolute; top: 10px; left: 1180px;" width="125" height="125">
+
     </font>
 </body>
 </html>
