--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cinco de Junio</title>
+    <title>Cinco de Junio Saldarriaga</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
